--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     </head>
     <body>
         <h1>Lesson 4</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A doloribus fugiat quia molestiae pariatur nulla delectus, nobis vel cumque, facere sapiente ratione. Repudiandae nam dolores molestiae ipsum dolor neque numquam!</p>
     </body>
 </html>
