Address Tag Added

--- a/index.html
+++ b/index.html
@@ -2,9 +2,42 @@
 <html>
     <head>
         <title>Lesson 4</title>
+        <link rel="stylesheet" href="./css/reset.css">
+        <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
-        <h1>Lesson 4</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. A doloribus fugiat quia molestiae pariatur nulla delectus, nobis vel cumque, facere sapiente ratione. Repudiandae nam dolores molestiae ipsum dolor neque numquam!</p>
+        <header>
+            <nav>
+                <ul>
+                    <li id="activePage">
+                        <a href="./index.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="#">About</a>
+                    </li>
+                    <li>
+                        <a href="#">Contact</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <div>
+            <address class="addressWrap">
+                <h3>საკონტაქტო ინფორმაცია:</h3>
+                <div>
+                    <p class="addressIdentifier">მისამართი:</p>
+                    <a href="https://goo.gl/maps/BuijApcHL1995VCA6" target="_blank">პეტრიაშვილის ქ. 30</a>
+                </div>
+                <div>
+                    <p class="addressIdentifier">ტელ:</p>
+                    <a href="tel:+99532222222" >+995 32 222 222</a>
+                </div>
+                <div>
+                    <p class="addressIdentifier">ელ. ფოსტა:</p>
+                    <a href="mailto:mail@gmail.com" target="_blank">mail@gmail.com</a>
+                </div>
+                <img src="./images/photo.jpeg" alt="test photo">
+            </address>
+        </div>
     </body>
 </html>
